--- a/index.html
+++ b/index.html
@@ -219,3 +219,146 @@
 </div>
 
 </body></html>
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Ethnic Threads - Account</title>
+<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
+<script>
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {
+            colors: {
+              primary: "#ec1337",
+              "background-light": "#f8f6f6",
+              "background-dark": "#221013",
+              "foreground-light": "#181112",
+              "foreground-dark": "#f8f6f6",
+              "subtle-light": "#896168",
+              "subtle-dark": "#a18c8f",
+              "border-light": "#e6dbdd",
+              "border-dark": "#442026",
+            },
+            fontFamily: {
+              display: ["Be Vietnam Pro", "sans-serif"],
+            },
+            borderRadius: {
+              DEFAULT: "0.25rem",
+              lg: "0.5rem",
+              xl: "0.75rem",
+              full: "9999px",
+            },
+          },
+        },
+      };
+    </script>
+<style>
+      .form-input::placeholder {
+        color: #896168;
+      }
+      .dark .form-input::placeholder {
+        color: #a18c8f;
+      }
+    </style>
+</head>
+<body class="bg-background-light dark:bg-background-dark font-display text-foreground-light dark:text-foreground-dark">
+<div class="flex min-h-screen flex-col">
+<header class="border-b border-border-light dark:border-border-dark px-4 sm:px-6 lg:px-10 py-3">
+<div class="mx-auto flex max-w-7xl items-center justify-between">
+<div class="flex items-center gap-4">
+<svg class="h-6 w-6 text-primary" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+<path clip-rule="evenodd" d="M24 4H42V17.3333V30.6667H24V44H6V30.6667V17.3333H24V4Z" fill="currentColor" fill-rule="evenodd"></path>
+</svg>
+<h1 class="text-xl font-bold">Ethnic Threads</h1>
+</div>
+<nav class="hidden lg:flex items-center gap-8 text-sm font-medium">
+<a class="hover:text-primary transition-colors" href="#">New Arrivals</a>
+<a class="hover:text-primary transition-colors" href="#">Clothing</a>
+<a class="hover:text-primary transition-colors" href="#">Jewelry</a>
+<a class="hover:text-primary transition-colors" href="#">Accessories</a>
+<a class="hover:text-primary transition-colors" href="#">Sale</a>
+</nav>
+<div class="flex items-center gap-2">
+<button class="hidden sm:flex items-center justify-center rounded-lg h-10 px-4 text-sm font-bold bg-background-light dark:bg-background-dark hover:bg-primary/10 dark:hover:bg-primary/20 transition-colors">
+              Wishlist
+            </button>
+<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-background-light dark:bg-background-dark hover:bg-primary/10 dark:hover:bg-primary/20 transition-colors">
+<span class="material-symbols-outlined text-2xl"> shopping_bag </span>
+</button>
+<button class="lg:hidden flex items-center justify-center rounded-lg h-10 w-10 bg-background-light dark:bg-background-dark hover:bg-primary/10 dark:hover:bg-primary/20 transition-colors">
+<span class="material-symbols-outlined text-2xl"> menu </span>
+</button>
+</div>
+</div>
+</header>
+<main class="flex flex-1 items-center justify-center py-12 sm:px-6 lg:px-8">
+<div class="w-full max-w-md space-y-8 px-4">
+<div>
+<h2 class="mt-6 text-center text-3xl font-bold tracking-tight">Welcome to Ethnic Threads</h2>
+<p class="mt-2 text-center text-sm text-subtle-light dark:text-subtle-dark">
+              Sign in to your account or create a new one.
+            </p>
+</div>
+<div class="space-y-6">
+<div>
+<label class="sr-only" for="email">Email address</label>
+<input autocomplete="email" class="form-input relative block w-full appearance-none rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark px-3 py-3 placeholder-subtle-light dark:placeholder-subtle-dark focus:z-10 focus:border-primary focus:outline-none focus:ring-primary sm:text-sm" id="email" name="email" placeholder="Email address" required="" type="email"/>
+</div>
+<div>
+<label class="sr-only" for="password">Password</label>
+<input autocomplete="current-password" class="form-input relative block w-full appearance-none rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark px-3 py-3 placeholder-subtle-light dark:placeholder-subtle-dark focus:z-10 focus:border-primary focus:outline-none focus:ring-primary sm:text-sm" id="password" name="password" placeholder="Password" required="" type="password"/>
+</div>
+<div class="flex items-center justify-end">
+<div class="text-sm">
+<a class="font-medium text-primary hover:text-primary/80" href="#"> Forgot your password? </a>
+</div>
+</div>
+<div>
+<button class="group relative flex w-full justify-center rounded-lg border border-transparent bg-primary py-3 px-4 text-sm font-bold text-white hover:bg-primary/90 focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 focus:ring-offset-background-light dark:focus:ring-offset-background-dark" type="submit">
+                Sign In
+              </button>
+</div>
+</div>
+<div class="relative">
+<div class="absolute inset-0 flex items-center">
+<div class="w-full border-t border-border-light dark:border-border-dark"></div>
+</div>
+<div class="relative flex justify-center text-sm">
+<span class="bg-background-light dark:bg-background-dark px-2 text-subtle-light dark:text-subtle-dark">Or sign in with</span>
+</div>
+</div>
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
+<button class="inline-flex w-full justify-center items-center gap-2 rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark py-2.5 px-4 text-sm font-medium hover:bg-primary/10 dark:hover:bg-primary/20 transition-colors">
+<svg aria-hidden="true" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
+<path d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z"></path>
+<path d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z"></path>
+<path d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z"></path>
+<path d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z"></path>
+<path d="M1 1h22v22H1z" fill="none"></path>
+</svg>
+              Google
+            </button>
+<button class="inline-flex w-full justify-center items-center gap-2 rounded-lg border border-border-light dark:border-border-dark bg-background-light dark:bg-background-dark py-2.5 px-4 text-sm font-medium hover:bg-primary/10 dark:hover:bg-primary/20 transition-colors">
+<svg aria-hidden="true" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
+<path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-1.5c-1.38 0-1.5.62-1.5 1.44V12h3l-.5 3h-2.5v7.8c4.56-.93 8-4.96 8-9.8z"></path>
+</svg>
+              Facebook
+            </button>
+</div>
+<div class="text-center text-sm">
+<p class="text-subtle-light dark:text-subtle-dark">
+              New to Ethnic Threads?
+              <a class="font-medium text-primary hover:text-primary/80" href="#"> Create an account </a>
+</p>
+</div>
+</div>
+</main>
+</div>
+
+</body></html>
